--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -19,6 +19,7 @@
     }
    ],
    "source": [
+    "###26-august-2019\n",
     "###write a program to print first 15 prime numbers.\n",
     "\n",
     "for i in range(1,16):\n",
@@ -156,6 +157,7 @@
     }
    ],
    "source": [
+    "###27-august-2019\n",
     "###write a program to find the given number is the given range\n",
     "n1=int(input(\"lower bound\"))\n",
     "n2=int(input(\"upper bound\"))\n",
@@ -321,11 +323,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "### a weight is 1 b weight is 2 so sumation of aba is 4(1+2+1=4)\n"
+    "###28-august-2019\n",
+    "### a weight is 1 b weight is 2 so sumation of aba is 4(1+2+1=4)\n",
+    "num=input()\n",
+    "sum=0\n",
+    "l=len(num)\n",
+    "for i in range(l):\n",
+    "        a=ord(num[i])-ord('a')+1\n",
+    "        sum=sum+a\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter input like LLRDDR:LLRDDR\n",
+      "-1 0\n",
+      "-2 0\n",
+      "-1 0\n",
+      "-1 -1\n",
+      "-1 -2\n",
+      "0 -2\n"
+     ]
+    }
+   ],
+   "source": [
+    "###E-mazein:x and y axis need to take input like LLRDDR(STRINGS)\n",
+    "a=input(\"Enter input like LLRDDR:\")\n",
+    "x,y=0,0\n",
+    "for i in a:\n",
+    "    if(i=='L'):\n",
+    "        x-=1\n",
+    "        y=y\n",
+    "    elif(i=='R'):\n",
+    "        x+=1\n",
+    "        y=y\n",
+    "    elif(i=='D'):\n",
+    "        x=x\n",
+    "        y-=1\n",
+    "    elif(i=='U'):\n",
+    "        x=x\n",
+    "        y+=1\n",
+    "    print(x,y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the integer1 % 2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "##take two operands and operator in single line\n",
+    "num=(input(\"enter the integer\"))\n",
+    "num=num.split()\n",
+    "\n",
+    "if num[1]=='+':\n",
+    "    print(int(num[0])+int(num[2]))\n",
+    "elif num[1]=='-':\n",
+    "    print(int(num[0])-int(num[2]))\n",
+    "elif num[1]=='*':\n",
+    "    print(int(num[0])*int(num[2]))\n",
+    "elif num[1]=='/':\n",
+    "    print(int(num[0])//int(num[2]))\n",
+    "elif num[1]=='%':\n",
+    "    print(int(num[0])%int(num[2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the width160\n",
+      "enter the height180\n",
+      "upload another photo\n"
+     ]
+    }
+   ],
+   "source": [
+    "###upload profile photo\n",
+    "l=180\n",
+    "w=int(input(\"enter the width\"))\n",
+    "h=int(input(\"enter the height\"))\n",
+    "\n",
+    "if(l==w==h):\n",
+    "    print(\"your photo is upto the mark\")\n",
+    "elif((w<l)|(h<l)):\n",
+    "    print(\"upload another photo\")\n",
+    "elif((w>l)|(h>l)):\n",
+    "    print(\"have to crop the image\")\n",
+    "    if((w>l)and(l==h)):\n",
+    "        wi=w-l\n",
+    "        print(\"you have to crop\",+wi,\"in the width\")\n",
+    "    elif((l==w)and(h>l)):\n",
+    "        hi=h-l\n",
+    "        print(\"you have to crop\",+hi,\"in the height\")\n",
+    "    elif((w>l)and(h>l)):\n",
+    "        wi=w-l\n",
+    "        print(\"you have to crop\",+wi,\"in the width\")\n",
+    "        hi=h-l\n",
+    "        print(\"you have to crop\",+hi,\"in the height\")"
    ]
   },
   {
@@ -333,9 +462,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "###E-mazein:x and y axis need to take input like LLRDDR(STRINGS)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
