--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -459,6 +459,610 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5040"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "###30-august-2019\n",
+    "### factorial of a given nuber using functions\n",
+    "def fact(n):\n",
+    "    f=s=1\n",
+    "    for i in range (1,n+1):\n",
+    "        f1=f*i\n",
+    "        s=s*f1\n",
+    "    return s\n",
+    "num=int(input())\n",
+    "fact(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "250\n",
+      "102\n",
+      "108\n",
+      "114\n",
+      "120\n",
+      "126\n",
+      "132\n",
+      "138\n",
+      "144\n",
+      "150\n",
+      "156\n",
+      "162\n",
+      "168\n",
+      "174\n",
+      "180\n",
+      "186\n",
+      "192\n",
+      "198\n",
+      "204\n",
+      "210\n",
+      "216\n",
+      "222\n",
+      "228\n",
+      "234\n",
+      "240\n",
+      "246\n"
+     ]
+    }
+   ],
+   "source": [
+    "###Function to print all number divisible by 6 and not a factor of 100 in a given range(l,U) both inclusive\n",
+    "def divisible(l,u):\n",
+    "    for i in range(l,u+1):\n",
+    "        if(i%6==0 and 100%i!=0):\n",
+    "            print(i)\n",
+    "lower=int(input())\n",
+    "upper=int(input())\n",
+    "divisible(lower,upper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "360.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Function to find the average of cubes of all the even numbers in a given range (l,u)inclusive\n",
+    "def average_even(l,u):\n",
+    "    s=0\n",
+    "    c=0\n",
+    "    for i in range(l,u+1):\n",
+    "        if(i%2==0):\n",
+    "            e=i**3\n",
+    "            s=s+e\n",
+    "            c=c+1\n",
+    "    return s/c\n",
+    "lower=int(input())\n",
+    "upper=int(input())\n",
+    "average_even(lower,upper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "1\n",
+      "2\n",
+      "4\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Function to generate a factor for a given number\n",
+    "def number(n):\n",
+    "    for i in range(1,n+1):\n",
+    "        if(n%i==0):\n",
+    "            print(i)\n",
+    "num=int(input())\n",
+    "number(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71\n",
+      "71 is prime\n"
+     ]
+    }
+   ],
+   "source": [
+    "###Function to check a number is prime\n",
+    "def prime(n):\n",
+    "    c=0\n",
+    "    for i in range(1,n+1):\n",
+    "        if(n%i==0):\n",
+    "            c=c+1\n",
+    "    if(c==2):\n",
+    "        print(n,\"is prime\")\n",
+    "    else:\n",
+    "        print(n,\"not prime\")\n",
+    "num=int(input())\n",
+    "prime(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "5 not prime\n",
+      "6 not prime\n",
+      "7 not prime\n",
+      "8 not prime\n",
+      "9 not prime\n",
+      "10 not prime\n"
+     ]
+    }
+   ],
+   "source": [
+    "###Function to calculate the average  of first N Prime Numbers\n",
+    "def prime(l,u):\n",
+    "    c=0\n",
+    "    k=l\n",
+    "    \n",
+    "    for i in range(l,u+1):\n",
+    "        \n",
+    "        for j in range(1,i):\n",
+    "            if(i%j==0):\n",
+    "                c=c+1\n",
+    "        if(c==2):\n",
+    "            print(i,\"is prime\")\n",
+    "        else:\n",
+    "            print(i,\"not prime\")\n",
+    "num=int(input())\n",
+    "num1=int(input())\n",
+    "prime(num,num1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "50\n",
+      "28\n"
+     ]
+    }
+   ],
+   "source": [
+    "###Function to print all perfect numbers in a given range\n",
+    "def perfect_num(l,u):\n",
+    "    s=0\n",
+    "    for i in range(l,u+1):\n",
+    "        for j in range(1,i):\n",
+    "            if(i%j==0):\n",
+    "                s+=j\n",
+    "        if(s==i):\n",
+    "            print(i)\n",
+    "        s=0\n",
+    "lower=int(input())\n",
+    "upper=int(input())\n",
+    "perfect_num(lower,upper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a number25\n",
+      "42.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "###average of first N prime numbers\n",
+    "def avgfirstnprime(n):\n",
+    "    i=1\n",
+    "    x=2\n",
+    "    s=0\n",
+    "    flag=0\n",
+    "    while i<=n:\n",
+    "        for j in range(2,x):\n",
+    "            if(x%j==0):\n",
+    "                flag+=1\n",
+    "        if(flag==0):\n",
+    "            i+=1\n",
+    "            s+=x\n",
+    "            x+=1\n",
+    "        else:\n",
+    "            x=x+1\n",
+    "            flag=0\n",
+    "    return s/n\n",
+    "n=int(input('enter a number'))\n",
+    "print(avgfirstnprime(n))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def prime(n):\n",
+    "    count=0\n",
+    "    for i in range(1,n+1):\n",
+    "        for j in range(1,n+1):\n",
+    "            if(i%j==0):\n",
+    "                count=count+1\n",
+    "        \n",
+    "        if(count==2):\n",
+    "            print(\"hiii\")\n",
+    "           \n",
+    "num=int(input())\n",
+    "prime(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1 2 3 4 5\n",
+      "['1', '2', '3', '4', '5']\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "3125\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "# Sample code to perform I/O:\n",
+    "\n",
+    "name = input()                  # Reading input from STDIN\n",
+    "print('Hi, %s.' % name)         # Writing output to STDOUT\n",
+    "\n",
+    "# Warning: Printing unwanted or ill-formatted data to output will cause the test cases to fail\n",
+    "'''\n",
+    "\n",
+    "# Write your code here\n",
+    "num=int(input())\n",
+    "s=1\n",
+    "n1=(input())\n",
+    "n2=n1.split()\n",
+    "print(n2)\n",
+    "for i in range(0,len(n2)):\n",
+    "    print(int(n2[i]))\n",
+    "    s=s*p\n",
+    "print(s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jyosh\n",
+      "hritika\n"
+     ]
+    }
+   ],
+   "source": [
+    "###3 september\n",
+    "###print highest marks of the student\n",
+    "students=[[\"jyo\",10,20,30],[\"jyosh\",30,40,60],[\"hritika\",30,40,60]]\n",
+    "high=0\n",
+    "for i in students:\n",
+    "    name=i[0]\n",
+    "    marks=i[1]+i[2]+i[3]\n",
+    "    if high<marks:\n",
+    "        high=marks\n",
+    "for i in students:\n",
+    "    name=i[0]\n",
+    "    marks=i[1]+i[2]+i[3]\n",
+    "    if high==marks:\n",
+    "        print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 50, 10], [1, 30, 40], [3, 40, 100]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "####sorting should be done on list second element\n",
+    "students=[[1,30,40],[3,40,100],[2,50,10]]\n",
+    "students[0][2],students[0][0]=students[0][0],students[0][2]\n",
+    "students[1][2],students[1][0]=students[1][0],students[1][2]\n",
+    "students[2][2],students[2][0]=students[2][0],students[2][2]\n",
+    "students.sort()\n",
+    "students[0][0],students[0][2]=students[0][2],students[0][0]\n",
+    "students[1][0],students[1][2]=students[1][2],students[1][0]\n",
+    "students[2][0],students[2][2]=students[2][2],students[2][0]\n",
+    "print(students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "###find the number of characters(a-z and A-Z)\n",
+    "###find the number of numbers in the given string\n",
+    "count=count1=0\n",
+    "data=\"Jyothsna 123 Hritika\"\n",
+    "for i in data:\n",
+    "    if(\"A\"<=i<=\"Z\" or \"a\"<=i<=\"z\"):\n",
+    "        count=count+1\n",
+    "    elif(\"0\"<=i<\"9\"):\n",
+    "        count1=count1+1\n",
+    "print(count)\n",
+    "print(count1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###sum of digits\n",
+    "def sum_digit(data):\n",
+    "    r=c=0\n",
+    "    for i in data:\n",
+    "        if i.isdigit():\n",
+    "            r=r+int(i)\n",
+    "    return r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_digit(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "###average of numbers in a string\n",
+    "c=0\n",
+    "for i in data:\n",
+    "    if i.isdigit():\n",
+    "        c=c+1\n",
+    "        \n",
+    "a=sum_digit(data)\n",
+    "print(a/c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "####lucky number\n",
+    "data=\"123456\"\n",
+    "while True:\n",
+    "    r=str(sum_digit(data))\n",
+    "    if(len(r)>1):\n",
+    "        data=r\n",
+    "    else:\n",
+    "        break\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'alpha': 5, 'digits': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data=\"jyosh1234\"\n",
+    "r={}\n",
+    "for c in data:\n",
+    "    if c.isalpha():\n",
+    "        r['alpha']=r.get('alpha',0)+1\n",
+    "    if c.isdigit():\n",
+    "        r['digits']=r.get('digits',0)+1\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'J': 1, 'y': 1, 'o': 1, 't': 2, 'h': 2, 's': 1, 'n': 1, 'a': 2, ' ': 1, 'r': 1, 'i': 2, 'k': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "###find frequency of characters\n",
+    "name=\"Jyothsna hritika\"\n",
+    "frequency={}\n",
+    "for i in name:\n",
+    "    for j in i:\n",
+    "        if(i==j):\n",
+    "            frequency[i]=frequency.get(i,0)+1\n",
+    "            \n",
+    "print(frequency)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'www.gmail.com': 1, 'www.yahoo.com': 1, 'www.google.com': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "####find frequency of urls\n",
+    "urls={'www.google.com','www.gmail.com','www.yahoo.com','www.google.com',}\n",
+    "frequency={}\n",
+    "for i in urls:\n",
+    "    for j in urls:\n",
+    "        if(i==j):\n",
+    "            frequency[i]=frequency.get(i,0)+1\n",
+    "print(frequency)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
