--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -749,14 +749,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "6\n",
+      "3\n"
      ]
     }
    ],
@@ -764,12 +765,12 @@
     "def prime(n):\n",
     "    count=0\n",
     "    for i in range(1,n+1):\n",
-    "        for j in range(1,n+1):\n",
+    "        for j in range(1,i):\n",
     "            if(i%j==0):\n",
     "                count=count+1\n",
     "        \n",
     "        if(count==2):\n",
-    "            print(\"hiii\")\n",
+    "            print(i)\n",
     "           \n",
     "num=int(input())\n",
     "prime(num)"
@@ -1039,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1052,13 +1053,189 @@
    ],
    "source": [
     "####find frequency of urls\n",
-    "urls={'www.google.com','www.gmail.com','www.yahoo.com','www.google.com',}\n",
+    "urls={'www.google.com','www.gmail.com','www.yahoo.com','www.google.com'}\n",
     "frequency={}\n",
     "for i in urls:\n",
     "    for j in urls:\n",
     "        if(i==j):\n",
     "            frequency[i]=frequency.get(i,0)+1\n",
     "print(frequency)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "####4september\n",
+    "####develop pattern for company name endswith 'e' and must have 5 characters\n",
+    "import re\n",
+    "companies=['google','apple','microsoft','tcs']\n",
+    "for i in companies:\n",
+    "    if(re.search('^....e$',i)):\n",
+    "        print(i)\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i a m f r o m v i j a y a w a d a m y m y m o b i l e n u m b e r i s w e s t a y h e r e f r o m l a s t d a y s "
+     ]
+    }
+   ],
+   "source": [
+    "##### print only characters in the message\n",
+    "message=\"\"\" iam from &&vijayawada$my my mobile number is  9866131508 we stay here from last 3 days\"\"\"\n",
+    "for i in message:\n",
+    "    if(re.findall('[a-zA-Z]+',i)):\n",
+    "        print(i, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['iam',\n",
+       " 'from',\n",
+       " 'vijayawada',\n",
+       " 'my',\n",
+       " 'my',\n",
+       " 'mobile',\n",
+       " 'number',\n",
+       " 'is',\n",
+       " 'we',\n",
+       " 'stay',\n",
+       " 'here',\n",
+       " 'from',\n",
+       " 'last',\n",
+       " 'days']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('[a-zA-Z]+',message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['123', '456']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data=\"jyo 123 jyo 456\"\n",
+    "re.findall('\\d+',data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "####pattern for email id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6549873210\n",
+      "valid\n"
+     ]
+    }
+   ],
+   "source": [
+    "###create a function to check the given data is valid or not for given pattern\n",
+    "def mobile(num):\n",
+    "    if(re.search('^[6-9]\\d{9}$',num)):\n",
+    "        print(\"valid\")\n",
+    "    else:\n",
+    "        print(\"invalid\")\n",
+    "num=(input())        \n",
+    "mobile(num)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jyothsna.m\n",
+      "invalid\n"
+     ]
+    }
+   ],
+   "source": [
+    "####create a person name validator \n",
+    "###(M.jyothsna,jyothsna.M,jyothsna manne,manne jyothsna,jyothsna)\n",
+    "import re\n",
+    "def person(name):\n",
+    "    if(re.search('^[a-zA-Z]+[ .]{0,1}[a-zA-z]+[ ]*[a-zA-z]+$',name)):\n",
+    "            print(\"valid\")\n",
+    "    else:\n",
+    "        print(\"invalid\")\n",
+    "name=input()\n",
+    "person(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###create function to check given data valid or not for given pattern\n",
+    "def validate(pattern,data):\n",
+    "    if(pattern==('^[a-zA-Z]$')):\n",
+    "        re.search(pattern,data)\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
