--- a/10september.ipynb
+++ b/10september.ipynb
@@ -236,6 +236,216 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "403791.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "####Function to\n",
+    "def factorial(n):\n",
+    "    sum=0\n",
+    "    for i in range(1,n+1):\n",
+    "        s=1\n",
+    "        for j in range(1,i+1):\n",
+    "            f=j*1\n",
+    "            s=s*f\n",
+    "        sum=sum+s\n",
+    "    print(sum/n)\n",
+    "number=int(input())\n",
+    "factorial(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500\n",
+      "500 is not an Armstrong number\n"
+     ]
+    }
+   ],
+   "source": [
+    "###Function to generate N odd armstrong numbers\n",
+    "num = int(input())\n",
+    "order = len(str(num))\n",
+    "sum = 0\n",
+    "temp = num\n",
+    "while temp > 0:\n",
+    "    digit = temp % 10\n",
+    "    sum += digit ** order\n",
+    "    temp //= 10\n",
+    "if num == sum:\n",
+    "    print(num,\"is an Armstrong number\")\n",
+    "else:\n",
+    "    print(num,\"is not an Armstrong number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord('z')-96"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aba\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['aba']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string=input()\n",
+    "string.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keyfile='key_file.txt'\n",
+    "def keygeneration(keyfile):\n",
+    "    with open(keyfile,'w')as f:\n",
+    "        for i in range(10):\n",
+    "            if i<=5:\n",
+    "                f.write(str(i)+\" \"+s65tr(i+4)+\"\\n\")\n",
+    "            else:\n",
+    "                f.write(str(i)+\" \"+str(i-6)+\"\\n\")\n",
+    "    return\n",
+    "keygeneration(keyfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keyfile='reverse_key_file.txt'\n",
+    "def reverse_key(keyfile):\n",
+    "    with open(keyfile,'w')as f:\n",
+    "        for i in range(10):\n",
+    "            if 0<=i<4:\n",
+    "                f.write(str(i)+\" \"+str(i+6)+\"\\n\")\n",
+    "            else:\n",
+    "                f.write(str(i)+\" \"+str(i-4)+\"\\n\")\n",
+    "    return\n",
+    "keygeneration(keyfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "####function to encrypt the marks file:\n",
+    "keyfile=\"key_file.txt\"\n",
+    "def dictionary_key(keyfile):\n",
+    "    key={}\n",
+    "    fh=open(keyfile,'r')\n",
+    "    for i in fh:\n",
+    "        line=i.split()\n",
+    "        key[line[0]]=line[1]\n",
+    "    return key\n",
+    "dictionary_key(keyfile)\n",
+    "\n",
+    "datafile='marks.txt'\n",
+    "def encrypt(datafile,keyfile):\n",
+    "    key=dictionary_key(keyfile)\n",
+    "    fh=open(datafile,'r')\n",
+    "    file_data=fh.read().split('\\n')\n",
+    "    fh=open('encrypt.txt','w')\n",
+    "    for mark in file_data:\n",
+    "        line=''\n",
+    "        for marks in mark:\n",
+    "            line+=key[marks]\n",
+    "        fh.write(line+'\\n')\n",
+    "    return\n",
+    "encrypt(datafile,keyfile)\n",
+    "\n",
+    "data_file=\"encrypt.txt\"\n",
+    "key_file=\"reverse_key_file.txt\"\n",
+    "def decrypt(data_file,key_file):\n",
+    "    key=dictionary_key(key_file)\n",
+    "    fh=open(data_file,'r')\n",
+    "    filedata=fh.read().split('\\n')\n",
+    "    fh=open('decrypt.txt','w')\n",
+    "    for mark in filedata:\n",
+    "        line=''\n",
+    "        for marks in mark:\n",
+    "            line+=key[marks]\n",
+    "        fh.write(line+'\\n')\n",
+    "    return\n",
+    "decrypt(data_file,key_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
